# nugit

./: .gitignore  README.md  docker-compose.yml  package.json
.cursor/rules/: nugit-product-scope.mdc  (+1 more)
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/scripts/: call_api.py
backend/src/stackpr/: __init__.py  config.py  main.py  queue.py  worker.py  ws_manager.py
backend/src/stackpr/api/: __init__.py  account.py  auth.py  github_proxy.py  repos.py  webhooks.py  ws.py
backend/src/stackpr/auth/: __init__.py  dependencies.py
backend/src/stackpr/core/: __init__.py  branch_naming.py  models.py  nugit_file.py  rebase_plan.py  stack_graph.py
backend/src/stackpr/db/: __init__.py  models.py  session.py
backend/src/stackpr/github/: __init__.py  app_auth.py  branch_operations.py  contents.py  diff_operations.py  pr_operations.py  webhook_router.py
backend/src/stackpr/schemas/: __init__.py  stacks.py
backend/src/stackpr/services/: __init__.py
backend/tests/: __init__.py  conftest.py  test_core.py  test_nugit_file.py
chrome-plugin/: README.md  manifest.development.json  manifest.json  package.json  playwright.config.ts
cli/: package-lock.json  package.json
docs/: NEXT-STEPS.md  api-contract.md  github-app-and-test-repo.md  nugit-format.md  nugit-stack.schema.json  real-repo-runbook.md  stack-view.md  supported-workflows.md
frontend/: README.md  package-lock.json  package.json
scripts/: e2e-local.sh  nugit
vscode-plugin/: package-lock.json  package.json
(+61 files in other folders)
